--- a/src/main/resources/extent.properties
+++ b/src/main/resources/extent.properties
@@ -11,7 +11,7 @@ screenshot.dir=test-output/
 screenshot.rel.path=../
 
 systeminfo.os=windows-11
-systeminfo.user=Shidqi Adiatma a.k.a hipstertester
-systeminfo.appName==sauce-labs-mobile
+systeminfo.user=Shidqi Adiatma
+systeminfo.appName==test
 
 
